Fix tooltip visibility

--- a/src/pages/streams/StreamsList/styles.module.scss
+++ b/src/pages/streams/StreamsList/styles.module.scss
@@ -4,7 +4,6 @@
   --progress-bar-height: 28px;
   display: flex;
   flex-direction: column-reverse;
-  overflow-x: auto;
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
 
